--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,8 @@
-AM_CPPFLAGS = $(CXX14_FLAGS)
+AM_CPPFLAGS = $(CXX14_FLAGS) $(PANGOCAIRO_CFLAGS) $(GTKMM_CFLAGS)
 AM_CXXFLAGS = $(PICKY_CXXFLAGS)
 
 common_source =
 
 bin_PROGRAMS = cqp
 cqp_SOURCES = cqp.cc $(common_source)
+cqp_LDADD = $(PANGOCAIRO_LIBS) $(GTKMM_LIBS)
