Runs the command

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,7 @@ AM_CXXFLAGS = $(PICKY_CXXFLAGS)
 noinst_LIBRARIES = libfader.a
 
 common_source = fader.hh tracker.hh tracker.cc input.hh planner.hh planner.cc machines.hh \
-	model_runner.hh model_runner.cc
+	model_runner.hh model_runner.cc exception.hh
 
 libfader_a_SOURCES = fader.cc
 libfader_a_CXXFLAGS = $(TOLERANT_CXXFLAGS)
